# GSEGUtils

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MIGRATION-v1.0.md  README.md  RELEASE.md  RULESETS.md  mypy.ini  pyproject.toml  pyrightconfig.json  release-please-config.json
.github/actions/setup-python-deps/: action.yml
.github/scripts/: check_publish_gate.py
.github/workflows/: canary.yml  ci.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml
docs/: Makefile  README.md
docs/source/: API.rst  BaseArrays.rst  GSEGUtils.BaseArrays.rst  GSEGUtils.ValidatedArray.rst  GSEGUtils.base_arrays.ArrayNx2.rst  GSEGUtils.base_arrays.ArrayNx3.rst  GSEGUtils.base_arrays.BaseArray.rst  GSEGUtils.base_arrays.BaseVector.rst  GSEGUtils.base_arrays.FixedLengthArray.rst  GSEGUtils.base_arrays.HomogeneousArray.rst  GSEGUtils.base_arrays.NumericMixins.rst  GSEGUtils.base_arrays.rst  GSEGUtils.base_types.rst  GSEGUtils.lazy_disk_cache.rst  GSEGUtils.rst  GSEGUtils.util.rst  GSEGUtils.validators.rst  LazyDiskCache.rst  about.rst  conf.py  examples.rst  index.rst  introduction.rst
src/GSEGUtils/: __init__.py  __init__.pyi  base_arrays.py  base_types.py  config.py  constants.py  generate_init_stubs.py  lazy_disk_cache.py  logging_setup.py  singleton.py  util.py  validators.py
src/GSEGUtils/lazy_disk_cache/: __init__.py  disk_backed_ndarray.py  disk_backed_store.py  disked_backed_ndarray.py  lazy_disk_cache.py
tests/: test_base_arrays.py  test_constants.py  test_generate_init_stubs.py  test_lazy_disk_cache.py  test_pydantic_library.py  test_singleton.py  test_util.py  test_validators.py  test_validators_contract.py  utils.py
tests/benchmarks/: __init__.py  conftest.py  test_lazy_disk_cache.py  test_singleton.py
