[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

#TODO update documentation link and version

[project]
name = "GSEGUtils"
description = "General utility functions and classes for GSEG research/projects"
authors = [
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
    {name = "Jon Allemand", email = "jonal@ethz.ch"},
]
maintainers = [
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
requires-python = ">=3.12"
keywords = ["ONE", "TWO"]
license = {file = "LICENSE"}
classifiers = [ # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Framework :: Pydantic",

    "Private :: Do Not Upload" # REMOVE BEFORE FLIGHT -- PyPI will always reject packages with classifiers beginning with Private ::
]

dynamic = ["version", "readme"]

dependencies = [ # https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
                # https://packaging.python.org/en/latest/specifications/version-specifiers/#id5
    "numpy ~= 2.0",
    "pydantic ~= 2.11",
    "numpydantic ~= 1.6"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
write_to = "src/GSEGUtils/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"
tag_regex = '^v?(?P<version>\d+\.\d+\.\d+)$'
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*.[0-9]*.[0-9]*"]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/gseg-ethz/GSEGUtils.git"
Issues = "https://github.com/gseg-ethz/GSEGUtils/issues"
Changelog = "https://github.com/gseg-ethz/GSEGUtils/blob/main/CHANGELOG.md"

[project.optional-dependencies]
doc = [
    "sphinx @ git+https://github.com/sphinx-doc/sphinx.git@9a08711e0e18c63c609070aa0a79019b4db45a78",
    "sphinx_rtd_theme"
]
dev = [
    "black~=25.1",            # formatter
    "isort~=6.0",             # import sorter
    "flake8~=7.3",            # style linter
    "flake8-bugbear",         # best-practice checks
    "flake8-docstrings",      # docstring checks
    "mypy~=1.17",             # static typing
    "pre-commit~=4.3",        # git hooks runner
    "pytest~=8.4",            # test framework
    "coverage~=7.0",          # coverage reporting
]
